# cra-web

./: .gitignore  .gitmodules  BITDEPTH.md  COLORSPACES.md  COLORSPACESEXT.md  DITHER.md  EXT_IMAGE_FORMATS.md  GOAL.md  LICENSE.md  MIXED-DITHER.md  PIPELINE.md  PIXEL4_REFACTOR.md  PLAN.md  PORTING.md  PROGRESS.md  README.md  RESCALE.md  SAFETENSORS.md  TENT-SPACE.md  TODO.md  WHITEPOINT_C.md  WHITEPOINT_D65.md  app.js  build-cli.sh  build.sh  dither-worker.js  dither.html  index.html  linear-img-demo.html  linear-img-gpu-demo.html  linear-img-gpu.js  linear-img.js  palette-gamut-mapping.md  resize-worker.js  resize.html  setup.sh  sw.js  test-fp16-cycle.sh  test-fp32-cycle.sh  test-rgb565-rgb332-cycle.sh  (+3 more)
dither/: Cargo.toml
dither/src/: lib.rs
port/: Cargo.toml  gen-colorspace-derived.sh
port/src/: basic_lab.rs  basic_oklab.rs  basic_rgb.rs  binary_format.rs  buffer.rs  color.rs  color_distance.rs  colorspace_derived.rs  colorspace_primary.rs  correction.rs  cra_lab.rs  cra_oklab.rs  cra_rgb.rs  decode.rs  dither.rs  dither_bf16.rs  dither_colorspace_aware.rs  dither_colorspace_lab.rs  dither_colorspace_luminosity.rs  dither_common.rs  dither_fp16.rs  dither_lab.rs  dither_luminosity.rs  dither_perceptual.rs  dither_rgb.rs  dither_rgba  dither_rgba.rs  histogram.rs  lib.rs  output.rs  pixel.rs  rescale.rs  rotation.rs  sfi.rs  supersample.rs  tiled_lab.rs  tiled_oklab.rs  tiling.rs
port/src/dither/: basic.rs  bf16.rs  bitdepth.rs  common.rs  fp16.rs  kernels.rs  lab.rs  luminosity.rs  luminosity_alpha.rs  mod.rs  palette_hull.rs  palette_projection.rs  paletted.rs  rgb.rs  rgba.rs
port/src/format/: binary.rs  color_format.rs  decode.rs  esdm.rs  gif.rs  lvgl.rs  mod.rs  palettized_png.rs  rgb666.rs  sfi.rs
port/src/rescale/: bilinear.rs  ewa.rs  iterative.rs  kernels.rs  mod.rs  probabilistic.rs  scatter.rs  separable.rs  tent_ewa.rs  tests_advanced.rs  tests_basic.rs  variance_adaptive.rs
port/tools/gen_colorspace_derived/: Cargo.toml
port/tools/gen_colorspace_derived/src/: main.rs  primary.rs
tools/: README.md  analyze_1d_dither.py  analyze_1d_kernels.py  analyze_blue_noise_distribution.py  analyze_blue_noise_float.py  analyze_blue_noise_mt_float.py  analyze_blue_noise_pcg_float.py  analyze_blue_noise_rng.py  analyze_dither.py  analyze_wavelet.py  blue_dither.h  blue_noise_rng.c  blue_noise_rng.h  blue_noise_rng_float_test.cpp  blue_noise_rng_mt_float_test.cpp  blue_noise_rng_pcg_float_test.cpp  compare_kernels.py  d65_constants.py  derive_d65.py  derive_d65_1nm.py  derive_k_from_matrix.py  dither_map_experiment.py  generate_adaptive_blend_dither.py  generate_bayer_dither.py  generate_bluenoise_dither.py  generate_fft_bluenoise.py  generate_rng_noise.py  generate_test_images.py  generate_whitenoise_dither.py  int_blue_dither.c  noise_color_comparison.py  our_method_dither.py  postprocess_ramps.py  principal_frequency_comparison.py  run_dither_tests.sh  run_extra_dither_tests.sh  run_wavelet_tests.sh  spectrum_shape_comparison.py  tent_kernel.py  tent_kernel_2d.py  (+5 more)
tools/experiments/: analyze_1d_prime_pairs.py
tools/test_map/: generate_recursive_map.py  gradient_1bit.npy  gradient_2bit.npy  gradient_2bit_delay1.npy  gradient_2bit_delay4.npy  gradient_2bit_delay8.npy  gradient_4bit.npy  gradient_8bit.npy  gray_0.33_1bit_error.npy  ranked_output.npy  step2_error.npy  step2_target.npy  step3_error.npy
tools/test_map_repeat/: generate_repeat_map.py  generate_threshold_gif.py  ranked_output.npy
tools/test_map_repeat_wide/: generate_repeat_map.py  ranked_output.npy
tools/test_twelve/: second_order_dither.py
tools/test_wavelets/: REPORT.md
tools/test_wavelets/analysis/: wavelet_results.json  wavelet_summary.csv
wasm_cra/: cra_wasm.d.ts  cra_wasm.js
