[package]
name = "dither"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

# Release profile optimized for speed (see port/Cargo.toml for determinism notes)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
