[package]
name = "cra_wasm"
version = "0.1.0"
edition = "2021"
description = "Color correction algorithms ported to Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
cli = ["dep:clap"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# Image decoding and ICC support (used by both WASM and CLI)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
moxcms = "0.7"

# CLI-only dependencies
clap = { version = "4", features = ["derive"], optional = true }

[[bin]]
name = "cra"
path = "src/bin/cra.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
