[package]
name = "cra_wasm"
version = "1.6.0"
edition = "2024"
description = "Color correction algorithms ported to Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# CLI enables additional image formats beyond the WASM-compatible ones
cli = ["dep:clap", "image/tiff", "image/bmp", "image/ico", "image/hdr", "image/exr", "image/pnm", "image/qoi", "image/tga", "image/ff"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# Image decoding and ICC support (used by both WASM and CLI)
# Base formats for WASM (pure Rust decoders)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
moxcms = "0.7"

# SFI (Safetensors Floating-point Image) format support
serde_json = "1.0"
half = { version = "2.3", features = ["std"] }

# CLI-only dependencies
clap = { version = "4", features = ["derive"], optional = true }

[[bin]]
name = "cra"
path = "src/bin/cra.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
