[package]
name = "cra_wasm"
version = "1.9.1"
edition = "2024"
description = "Color correction algorithms ported to Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# CLI enables additional image formats beyond the WASM-compatible ones
cli = ["dep:clap", "image/tiff", "image/bmp", "image/ico", "image/hdr", "image/exr", "image/pnm", "image/qoi", "image/tga", "image/ff"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# Image decoding and ICC support (used by both WASM and CLI)
# Base formats for WASM (pure Rust decoders)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
moxcms = "0.7"

# PNG crate for palettized PNG output (direct PLTE/tRNS chunk control)
png = "0.17"

# SFI (Safetensors Floating-point Image) format support
serde_json = "1.0"
half = { version = "2.3", features = ["std"] }

# CLI-only dependencies
clap = { version = "4", features = ["derive"], optional = true }

[[bin]]
name = "cra"
path = "src/bin/cra/main.rs"
required-features = ["cli"]

# =============================================================================
# Release Profile - Optimized for Speed
# =============================================================================
# These settings prioritize runtime performance over compile time.
#
# Determinism note: opt-level=3 enables aggressive optimizations including
# auto-vectorization and loop unrolling, which may reorder floating-point
# operations. Combined with RUSTFLAGS (see build scripts), this produces
# fast but non-deterministic builds across different CPUs/platforms.
# =============================================================================
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# =============================================================================
# wasm-pack Configuration
# =============================================================================
# Configure wasm-opt to recognize WebAssembly features used by Rust.
# Without these flags, wasm-opt fails to validate the WASM binary.
#
# Features enabled (all part of "WebAssembly 2.0", supported in modern browsers):
#   --enable-simd: 128-bit vector operations (v128, i32x4, f32x4, etc.)
#                  Required because we compile with RUSTFLAGS='-C target-feature=+simd128'
#   --enable-bulk-memory: memory.copy/fill instructions for fast memcpy/memset
#                         Used by Rust for slice ops, Vec initialization, etc.
#   --enable-nontrapping-float-to-int: Saturating float-to-int (i32.trunc_sat_f32_u)
#                                      Used by Rust's `as` casts for safe conversion
# =============================================================================
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-simd", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
